# Breakout-Pong

./: Ball.h  BreakoutPong.cpp  CMakeLists.txt  Game.h  LICENSE  Paddle.h  PaddleAI.h  README.md  Tile.h  TileFactory.h  ball.cpp  game.cpp  main.cpp  paddle.cpp  paddleAI.cpp  tileFactory.cpp
include/: Ball.h  Game.h  Menu.h  PaddleAI.h  TileFactory.h
src/: ball.cpp  game.cpp  logger.cpp  main.cpp  menu.cpp  paddleAI.cpp
test/: ClassA.h  ClassB.h  main.cpp
